fix: 프로필 수정 모달 및 이미지 cropper 배치 수정
modal css의 수정 및 재사용으로 인해 프로필 모달 및 이미지 cropper의 배치가 변경된 것을 수정

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -19,12 +19,12 @@ input[type="file"] {
 .background {
   background: white;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
-  color: black;
+  color: #0f1419;
 }
 
 button {
   background-color: white;
-  color: black;
+  color: #0f1419;
   border: none;
 }
 
@@ -33,17 +33,17 @@ a {
   color: inherit;
 }
 
-
 form {
   width: 100%;
 }
 
 p {
-  color: #586d7d;
+  color: #536471;
 }
 
 img {
   background: white;
+  object-fit: cover;
 }
 
 .flex {
@@ -54,6 +54,23 @@ img {
 .flex-col {
   display: flex;
   flex-direction: column;
+  justify-content: center;
+}
+
+.p1 {
+  padding: 12px 16px;
+}
+
+.w1 {
+  width: 100%;
+}
+
+.h1 {
+  height: 100%;
+}
+
+.p-r {
+  position: relative;
 }
 
 .btn {
@@ -98,7 +115,7 @@ input[disabled] {
 }
 
 .black {
-  background-color: #000;
+  background-color: #0f1419;
 }
 
 .icon {
@@ -136,7 +153,7 @@ input[disabled] {
   position: absolute;
   top: 53px;
   width: 100%;
-  /* min-height: 100vh; */
+  min-height: 100vh;
   max-width: 600px;
   display: flex;
   flex-direction: column;
@@ -224,6 +241,21 @@ input[disabled] {
   color: #f92486;
 }
 
+.user-img {
+  position: absolute;
+  left: 16px;
+  top: 12px;
+  width: 48px;
+  height: 48px;
+  margin-right: 12px;
+}
+
+.user-img img {
+  width: 100%;
+  object-fit: cover;
+  border-radius: 100%;
+}
+
 /* 더보기 아이콘 */
 .more-box {
   position: absolute;
@@ -251,13 +283,23 @@ input[disabled] {
 
 /* 더보기 메뉴 */
 
+.more-modal-wrapper {
+  width: 100vw;
+  height: 100vh;
+  background-color: rgba(0, 0, 0, 0);
+  position: fixed;
+  left: 0;
+  top: 0;
+  z-index: 80;
+}
+
 .more-modal {
   width: 126px;
   position: absolute;
   right: 16px;
   background: white;
   border-radius: 12px;
-  z-index: 5;
+  z-index: 85;
 }
 
 .modal-shadow {
@@ -267,7 +309,6 @@ input[disabled] {
 .more-item-box {
   width: 100%;
   height: 44px;
-  padding: 12px 16px;
   font-weight: bold;
 }
 
@@ -282,11 +323,16 @@ input[disabled] {
 }
 
 .modal-wrapper {
-  width: 100vw;
+  width: calc(100vw - (100vw - 100%));
   height: 100vh;
-  display: flex;
+  background-color: rgba(0, 0, 0, 0.4);
+  position: fixed;
+  z-index: 80;
+  /* position: fixed;
+  z-index: 9999; */
+  /* display: flex;
   align-items: center;
-  justify-content: center;
+  justify-content: center; */
 }
 
 .modal {
@@ -297,13 +343,23 @@ input[disabled] {
   border-radius: 16px;
   z-index: 90;
   background: white;
-  position: relative;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  /* position: relative; */
 }
 
 .twt-modal {
   position: absolute;
+  top: 20%;
+  left: 50%;
+  transform: translate(-50%, -17%);
+  display: flex;
+  flex-direction: column;
   z-index: 100;
   min-height: fit-content;
+  overflow: auto;
 }
 
 .modal-top {
@@ -425,10 +481,6 @@ input[disabled] {
   border: solid 3.2px white;
 }
 
-.p1 {
-  padding: 12px 16px;
-}
-
 .mt-50 {
   margin-top: 80px;
 }
@@ -521,7 +573,54 @@ input[disabled] {
 .crop-container {
   border: none;
   top: 50%;
-  left:50%;
-  transform: translate(-50%, -50%);
+  left: 50%;
+  transform: translate(-50%, 0);
   height: 580px;
+  z-index: 9999;
+}
+
+.title {
+  font-size: 20px;
+  font-weight: bold;
+  height: 48px;
+}
+
+.people-container {
+  position: relative;
+  min-height: 72px;
+  align-items: flex-start;
+  justify-content: flex-end;
+  cursor: pointer;
+}
+
+.people-container:hover {
+  background-color: rgba(0, 0, 0, 0.03);
+}
+
+.people-content {
+  width: 100%;
+  max-width: 506px;
+  font-size: 15px;
+}
+
+.people-top {
+  position: relative;
+  justify-content: space-between;
+  height: 41.26px;
+}
+
+.people-top h4 {
+  font-weight: bold;
+}
+
+.people-bio {
+  width: 100%;
+  min-height: 24px;
+  padding-top: 4px;
+}
+
+.flex-item {
+  width: 100%;
+  height: 50%;
+  display: flex;
 }
